adicionei botoes do facebook

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <style>
-    @import url('https://fonts.googleapis.com/css2?family=Playball&family=Raleway:wght@600&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -97,11 +97,11 @@ header h2 {
 }
 
 .sobre-text li {
-    margin-left: 2em;
+    margin-left: 1em;
 }
 
 #habilities{
-    margin-top: 15px;
+    margin-top: 60px;
     margin-bottom: 15px;
 }
 
@@ -118,12 +118,7 @@ header h2 {
     margin: 0.5em;
 }
 
-#contato li {
-    padding: 2em;
-    background-color: whitesmoke;
-    border-radius: 8px;
-    margin: 2em;
-}
+
 
 #contato li a {
     color: rgb(54, 54, 54);
@@ -172,10 +167,10 @@ header h2 {
         <h2>Contato</h2>
             <ul>
                 <li>
-                    <a href="https://www.linkedin.com/in//" target="_blank">Perfil no Linkedin</a>
+                    <a href="https://www.facebook.com/fabio.camargos26" target="_blank"><img src="https://image.flaticon.com/icons/svg/1051/1051309.svg" width="50" height="53" alt="Facebook free icon" title="Facebook free icon"></a>
                 </li>
                 <li>
-                    <a href="https://github.com/fabiocmmc" target="_blank">Perfil no Github</a>
+                    <a href="https://www.instagram.com/fabiocmd/" target="_blank"><img src="https://image.flaticon.com/icons/svg/1051/1051313.svg" width="50" height="53" alt="Instagram free icon" title="Instagram free icon"></a>
                 </li>
             </ul>
     </section>
